log
Thu 16 May 2024 01:42:01 AM UTC: 
 tests:  0|5
total_score: 0/70
1079849
Thu 16 May 2024 01:58:12 AM UTC: 
 sudoku.c | 26 ++++++++++++++++++++++++++
 1 file changed, 26 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:73:25: error: expected ‘)’ before ‘{’ token
   73 |          if (is_valid(n) {
      |             ~           ^~
      |                         )
sudoku.c:78:7: error: expected expression before ‘}’ token
   78 |       }
      |       ^
Compilation failed
4a27e9b
Thu 16 May 2024 01:58:24 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:75:28: error: ‘newNode’ undeclared (first use in this function); did you mean ‘newNod’?
   75 |             pushBack(list, newNode) ;
      |                            ^~~~~~~
      |                            newNod
sudoku.c:75:28: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:74:19: error: unused variable ‘newNod’ [-Werror=unused-variable]
   74 |             Node* newNod = copy(n);
      |                   ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
deb1a88
Thu 16 May 2024 01:58:42 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
6d2dffe
Thu 16 May 2024 02:19:23 AM UTC: 
 sudoku.c | 22 +++++++++++++++++++---
 1 file changed, 19 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
260f8ef
Thu 16 May 2024 02:27:18 AM UTC: 
 sudoku.c | 55 ++++++++++++++++++++++++++++++++++++-------------------
 1 file changed, 36 insertions(+), 19 deletions(-)
 tests:  3|4
total_score: 20/70
d9b9826
Thu 16 May 2024 02:38:19 AM UTC: 
 sudoku.c | 53 ++++++++++++++++++-----------------------------------
 1 file changed, 18 insertions(+), 35 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:73:10: error: expected ‘,’ or ‘;’ before ‘for’
   73 |          for(int i = 0 ; i < 9 && valid; i++) {
      |          ^~~
sudoku.c:73:26: error: ‘i’ undeclared (first use in this function)
   73 |          for(int i = 0 ; i < 9 && valid; i++) {
      |                          ^
sudoku.c:73:26: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:73:45: error: expected ‘;’ before ‘)’ token
   73 |          for(int i = 0 ; i < 9 && valid; i++) {
      |                                             ^
      |                                             ;
sudoku.c:73:45: error: expected statement before ‘)’ token
Compilation failed
44001d8
Thu 16 May 2024 02:41:06 AM UTC: 
 sudoku.c | 19 +------------------
 1 file changed, 1 insertion(+), 18 deletions(-)
 tests:  0|5
total_score: 0/70
1e79f6b
Thu 16 May 2024 02:44:13 AM UTC: 
 sudoku.c | 19 ++++++-------------
 1 file changed, 6 insertions(+), 13 deletions(-)
 tests:  1|5
total_score: 5/70
8ec1a70
Thu 16 May 2024 02:46:50 AM UTC: 
 sudoku.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c:83:4: error: expected identifier or ‘(’ before ‘}’ token
   83 |    }
      |    ^
sudoku.c:84:5: error: expected identifier or ‘(’ before ‘return’
   84 |     return list;
      |     ^~~~~~
sudoku.c:85:1: error: expected identifier or ‘(’ before ‘}’ token
   85 | }
      | ^
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:82:7: error: control reaches end of non-void function [-Werror=return-type]
   82 |       }
      |       ^
cc1: all warnings being treated as errors
Compilation failed
0269805
Thu 16 May 2024 02:47:08 AM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:79:31: error: ‘col’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   79 |       newNode->sudo[row][col] = num;
      |       ~~~~~~~~~~~~~~~~~~~~~~~~^~~~~
sudoku.c:79:31: error: ‘row’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
cc1: all warnings being treated as errors
Compilation failed
0cd41ae
